[metadata]
name = dustyn
version = 0.0.1
author = C.M.T. Robert

[options]
packages = find:
python_requires = >=3.9
install_requires =
    more_itertools>=8.7.0
    rich>=10.0.0
    numpy>=1.20<1.21
    matplotlib>=3.4<3.5
    sympy>=1.7.1<1.8.0

[options.extras_require]
dev =
    hypothesis>=6.2.0<7.0
    pytest>=6.2.2<7.0
    cmasher>=1.5.10
    cmocean>=2.0

[options.packages.find]
exclude =
    tests*
    testing*

[flake8]
exclude = */__init__.py
ignore = E203, E501, W503

[isort]
profile = black
